@@ -742,6 +742,7 @@ inlead,	   0x4B9270,	0x4C08E0,	0x4B9300,	"City_add_building_if_done",			"void (_
 define,	   0x9C34E4,	0x9E5CDC,	0x9C34A4,	"p_zoom_to_city_after_update",			"bool *"
 define,	   0x5812BA,	0x58DFE7,	0x58101A,	"ADDR_PATHFINDER_RECONSTRUCTION_MAX_LEN",	"byte *"
 inlead,	   0x4BFD40,	0x4C7300,	0x4BFDD0,	"City_get_turns_to_build",			"int (__fastcall *) (City * this, int edx, int order_type, int order_id, bool param_3)"
+repl call, 0x4C06C0,	0x4C7C80,	0x4C0750,	"City_can_build_upgrade_type",			""
 
 ignore,	   0x4507B0,	0x452860,	0x0,		"Unit_ai_move_offensive_unit",			"void (__fastcall *) (Unit * this)"
 ignore,    0x44C340,	0x0,		0x0,		"Unit_ai_eval_bombard_target",			"int (__fastcall *) (Unit * this, int edx, int tile_x, int tile_y, int param_3)"
