@@ -693,3 +693,12 @@ limit_unit_loading_to_one_transport_per_turn = false
 ; now an experimental first step in that direction. If you turn this option on to help test it, make sure to report any crashes or strange behavior in
 ; the C3X mod thread.
 move_trade_net_object = false
+
+; In the base game, if you set Cavalry to upgrade to Tank but don't give it the upgrade ability, intending to make Cavalry obsolete when Tanks become
+; available but not upgradable to them, you'll be left with the strange situation that older units such as Knights are allowed to upgrade to Tanks
+; even though Cavalry are not. This option makes it so that Knights upgrade to Cavalry in that case. In general, it makes it so that upgrade chains
+; stop at the type along the chain that does not have the upgrade ability.
+; NOTE: The chain is only stopped if the civ in question can build the unit type. The example above is simplified. In the actual rules, Cavalry
+; upgrades to Sipahi, which upgrades to Cossack. Blocking the upgrade chain at Cavalry would prevent Ottomans and Russia from upgrading to their
+; unique units, so the mod won't do that. You must clear the upgrade ability from Sipahi and Cossack as well to block those civs there instead.
+prevent_old_units_from_upgrading_past_ability_block = false
