@@ -1,3 +1,6 @@
+- Option to prevent units from upgrading past an intermediate type that does not have the upgrade ability
+  - Setting named prevent_old_units_from_upgrading_past_ability_block
+
 * RELEASE 24
 - Option to share wonders among human players in hotseat mode, setting named share_wonders_in_hotseat
 - AI routine for "caravan units", which are modded units whose purpose is to be disbanded for shields
